# hero

./: Makefile
apps/hero-snitch/standalone/: .gitignore  Makefile  gen_snitch_config.py  run.sh  run_offload.sh
apps/hero-snitch/standalone/cva6-app/: Makefile  bringup.c  fesrv.c  fesrv_local.h
apps/hero-snitch/standalone/snitch-app/: CMakeLists.txt  snitch_hello_world.c
apps/hero-snitch/standalone/snitch-offload-app/: CMakeLists.txt  accel_if.c  accel_if.h  sa.c  sa.h  snitch.c
board/occamy/patches/u-boot-v2021.07/: 0001-WIP-Occamy-U-Boot-bringup.patch
env/: check_environment.sh
support/libsnitch/include/: fesrv.h  libsnitch.h
support/libsnitch/src/: fesrv.c  libsnitch-compat.c  libsnitch.c
support/snitch-driver/: snitch_module.c  snitch_module.h
toolchain/: setup-llvm-snitch.sh
